credit, inventory and sales dashboard

--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "@types/pdfjs-dist": "^2.10.378",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "pdfjs-dist": "^4.10.38",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-to-print": "^3.0.5",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
     "tesseract.js": "^4.1.1"
   },
